[503335] Fine tuning javadoc configuration
Change-Id: I4ab094c200e2be4e53f86b4e46be08f0078942ac
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.docs/pom.xml
+++ b/releng/org.eclipse.viatra.docs/pom.xml
@@ -28,11 +28,8 @@
        <skipTocGen>true</skipTocGen>
        <javadocOptions>
         <additionalArguments>
-         <additionalArgument>${javadoc-args}</additionalArgument>
-         <additionalArgument>
-          -link
-          http://docs.oracle.com/javase/7/docs/api/
-         </additionalArgument>
+         <additionalArgument>-noindex</additionalArgument>
+         <additionalArgument>-linkoffline http://docs.oracle.com/javase/7/docs/api/</additionalArgument>
          <additionalArgument>-public</additionalArgument>
          <!-- API tools tags -->
          <additionalArgument>-tag 'noimplement:a:No Implement:'</additionalArgument>
