[503318] Removed dse feature project from the maven repo build

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -40,6 +40,7 @@
 
 		<!-- DSE -->
 		<module>../org.eclipse.viatra.parent.dse</module>
+		<module>../../dse/features/org.eclipse.viatra.dse.feature</module>
 
 		<!-- Addons -->
 		<module>../../addon/plugins/org.eclipse.viatra.addon.querybyexample</module>
