[506895] Added emf.edit dependency to dse maven build
Change-Id: I9ced49565b8b64f5f1438a864bfc2668e98b4725

--- a/maven/viatra-dse-runtime/pom.xml
+++ b/maven/viatra-dse-runtime/pom.xml
@@ -11,6 +11,10 @@
         <relativePath>../../releng/org.eclipse.viatra.parent.dse/pom.xml</relativePath>
     </parent>
 
+    <properties>
+        <emf.edit.version>2.10.1</emf.edit.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.eclipse.viatra</groupId>
@@ -43,6 +47,11 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.edit</artifactId>
+            <version>${emf.edit.version}</version>
         </dependency>
     </dependencies>
 
