--- a/maven/viatra-dse-runtime/pom.xml
+++ b/maven/viatra-dse-runtime/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>org.eclipse.emf.edit</artifactId>
             <version>${emf.edit.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+            <version>${emf.edit.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
