[493140] Added functional dependency inference via QueryAnalyzer
Functional dependency information lost through pattern call boundary 

Change-Id: I400f87bfdf2ca80d4b6a434ff9c7d70f33c7e8a2
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=493140
Signed-off-by: bergmann <bergmann@mit.bme.hu>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage/plugin.xml
@@ -505,5 +505,26 @@
            type="method">
      </pure-element>
   </extension>
+  <extension
+        point="org.eclipse.viatra.query.patternlanguage.annotation">
+     <annotation
+           description="This annotation is used to record domain-specific knowledge about a functional dependency among matches of this pattern. For a given value combination of the &apos;forEach&apos; parameters, at most one value of each &apos;unique&apos; parameter may occur in the match set."
+           name="FunctionalDependency">
+        <annotationparameter
+              description="The name of a query parameter on the left-hand side of the dependency."
+              mandatory="false"
+              multiple="true"
+              name="forEach"
+              type="variablereference">
+        </annotationparameter>
+        <annotationparameter
+              description="The name of a query parameter on the right-hand side of the dependency."
+              mandatory="false"
+              multiple="true"
+              name="unique"
+              type="variablereference">
+        </annotationparameter>
+     </annotation>
+  </extension>
 
 </plugin>
