[507456] initial contribution of EVM-JDT integration
	This change provides a basic event realm implementation on
	top of the JDT incremental builder.

Change-Id: Icb77768f0e22c9e760e54a080c373ff81f407a07
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>
Signed-off-by: Daniel Segesdi <daniel.segesdi@incquerylabs.com>
Signed-off-by: Robert Doczi <robert.doczi@incquerylabs.com>
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -57,6 +57,7 @@
 		<module>../../addon/features/org.eclipse.viatra.addon.viewers.tooling.feature</module>
 
 		<!-- Integration -->
+		<module>../../integration/plugins/org.eclipse.viatra.integration.evm.jdt</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.graphiti</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.modisco</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.mwe2</module>
