[releng] Experimental maven repository settings
Change-Id: I5d4fb7ea26b4f4b478e18604dc865a9b0dc76c4f
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -217,14 +217,14 @@
 		<url>${eclipse.bugzillaUrl}</url>
 		<system>Bugzilla</system>
 	</issueManagement>
-	<!-- <repositories>
-	    <repository>
+	<repositories>
+	    <!-- <repository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <releases><enabled>false</enabled></releases>
             <snapshots><enabled>true</enabled></snapshots>
-        </repository>
-	</repositories>-->
+        </repository> -->
+	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>cbi-releases</id>
