--- a/maven/viatra-maven-plugin/pom.xml
+++ b/maven/viatra-maven-plugin/pom.xml
@@ -1,92 +1,92 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
         <artifactId>org.eclipse.viatra.parent.core</artifactId>
         <groupId>org.eclipse.viatra</groupId>
         <version>1.5.0-SNAPSHOT</version>
         <relativePath>../../releng/org.eclipse.viatra.parent.core/pom.xml</relativePath>
     </parent>
-	<artifactId>viatra-maven-plugin</artifactId>
-	<packaging>maven-plugin</packaging>
-	<name>VIATRA Maven Plug-in</name>
+    <artifactId>viatra-maven-plugin</artifactId>
+    <packaging>maven-plugin</packaging>
+    <name>VIATRA Maven Plug-in</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-plugin-api</artifactId>
-			<version>3.0.4</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.0.4</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-			<version>[2.11.0,2.12.0)</version>
-		</dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+            <version>[2.11.0,2.12.0)</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.xtend</groupId>
-			<artifactId>org.eclipse.xtend.lib</artifactId>
-			<version>${xtend.compiler.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.eclipse.xtend</groupId>
+            <artifactId>org.eclipse.xtend.lib</artifactId>
+            <version>${xtend.compiler.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.core</groupId>
-			<artifactId>org.eclipse.core.resources</artifactId>
-			<version>3.7.100</version>
-		</dependency>
+        <dependency>
+            <groupId>org.eclipse.core</groupId>
+            <artifactId>org.eclipse.core.resources</artifactId>
+            <version>3.7.100</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
-			<version>[2.11.0,2.12.0)</version>
-		</dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.codegen.ecore</artifactId>
+            <version>[2.11.0,2.12.0)</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.viatra</groupId>
-			<artifactId>viatra-query-runtime</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.eclipse.viatra</groupId>
+            <artifactId>viatra-query-runtime</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.viatra</groupId>
-			<artifactId>viatra-query-language</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.eclipse.viatra</groupId>
+            <artifactId>viatra-query-language</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.xtext</groupId>
-			<artifactId>xtext-maven-plugin</artifactId>
-			<version>${xtend.compiler.version}</version>
-		</dependency>
-	</dependencies>
-	<repositories>
-		<repository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/groups/releases/</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/groups/releases/</url>
-		</pluginRepository>
-	</pluginRepositories>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.xtend</groupId>
-				<artifactId>xtend-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>xtext-maven-plugin</artifactId>
+            <version>${xtend.compiler.version}</version>
+        </dependency>
+    </dependencies>
+    <repositories>
+        <repository>
+            <id>releases.repo.eclipse.org</id>
+            <url>https://repo.eclipse.org/content/groups/releases/</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>releases.repo.eclipse.org</id>
+            <url>https://repo.eclipse.org/content/groups/releases/</url>
+        </pluginRepository>
+    </pluginRepositories>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.xtend</groupId>
+                <artifactId>xtend-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
                 <version>1.4</version>
@@ -106,6 +106,6 @@
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
             </plugin>
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 </project>
