[releng] Made maven artifacts compatible with Guava 15
The Xtext 2.9.2 specifies it does not work with Guava 15.0, the one used
in most Eclipse instances nowadays; however it works correctly with this
version in IDE environment. This change tries to overcomes this issue by
using Xtext 2.10 for code generation. Regardless, this does not make
Xtext 2.10 required in the runtime.

Change-Id: Ib6b211c5c081ab791d776c75e748b2f9072ad87b
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/maven/viatra-maven-plugin/pom.xml
+++ b/maven/viatra-maven-plugin/pom.xml
@@ -10,7 +10,9 @@
     <artifactId>viatra-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>VIATRA Maven Plug-in</name>
-
+    <properties>
+        <xtend.compiler.version>2.10.0</xtend.compiler.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
