--- a/maven/viatra-query-runtime/pom.xml
+++ b/maven/viatra-query-runtime/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>14.0</version>
+            <version>[14.0,19.0)</version>
         </dependency>
     </dependencies>
     <parent>
