--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -61,8 +61,9 @@
 		<module>../../integration/plugins/org.eclipse.viatra.integration.graphiti</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.modisco</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.mwe2</module>
-		<module>../../integration/features/org.eclipse.viatra.integration.modisco.feature</module>
 		<module>../../integration/tests/org.eclipse.viatra.integration.mwe2.test</module>
+		<module>../../integration/features/org.eclipse.viatra.integration.evm.jdt.feature</module>
+		<module>../../integration/features/org.eclipse.viatra.integration.modisco.feature</module>
 		<module>../../integration/features/org.eclipse.viatra.integration.graphiti.feature</module>
 		<module>../../integration/features/org.eclipse.viatra.integration.mwe2.feature</module>
 
