[507456] EVM-JDT integration - avoid JDT overhead without event sources
	rename build participant id, lower required source level
	add active flag to JDT realm
	builder participant is only active when realm is also active
	
Bug 507456

--- a/integration/plugins/org.eclipse.viatra.integration.evm.jdt/plugin.xml
+++ b/integration/plugins/org.eclipse.viatra.integration.evm.jdt/plugin.xml
@@ -11,6 +11,11 @@
  -->
 <plugin>
   <extension id="jdtBuildNotifierParticipant" name="jdtBuildNotifierParticipantName" point="org.eclipse.jdt.core.compilationParticipant">
-    <compilationParticipant class="org.eclipse.viatra.integration.evm.jdt.BuildNotifierCompilationParticipant" id="com.incquerylabs.evm.jdt.jdtBuildNotifierParticipant" modifiesEnvironment="false" requiredSourceLevel="1.8"/>
+    <compilationParticipant
+          class="org.eclipse.viatra.integration.evm.jdt.BuildNotifierCompilationParticipant"
+          createsProblems="false"
+          id="org.eclipse.viatra.integration.evm.jdt.jdtBuildNotifierParticipant"
+          modifiesEnvironment="false"
+          requiredSourceLevel="1.6"/>
   </extension>
 </plugin>
