[508378] add project classpath elements to maven plugin realm
	remove dependencies from viatra-maven-plugin definitions
	add feature switch to enable project dependencies on classpath
	generate getters and setters for generator fields
	change reflection to setters on generator for better readability

Bug 508378
Change-Id: I9d2db1a6c87d90a34f145d9e7dc6e362808cdd23
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/pom.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/pom.xml
@@ -93,6 +93,7 @@
 				</executions>
 				<configuration>
 					<outputDirectory>src-gen</outputDirectory>
+					<useProjectDependencies>true</useProjectDependencies>
 					<metamodels>
 						<metamodel>
 							<genmodelUri>model/notation.genmodel</genmodelUri>
