--- a/cep/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
+++ b/cep/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
@@ -110,6 +110,7 @@
 				</executions>
 				<configuration>
 					<outputDirectory>src-gen</outputDirectory>
+					<useProjectDependencies>true</useProjectDependencies>
 					<metamodels>
 						<metamodel>
 							<genmodelUri>models/InternalModel.genmodel</genmodelUri>
