--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/pom.xml
@@ -49,6 +49,7 @@
 				</executions>
 				<configuration>
 					<outputDirectory>src-gen</outputDirectory>
+					<useProjectDependencies>true</useProjectDependencies>
 					<metamodels>
 						<metamodel>
 							<packageClass>org.eclipse.viatra.query.runtime.rete.recipes.RecipesPackage</packageClass>
