--- a/releng/org.eclipse.viatra.parent.analysis/pom.xml
+++ b/releng/org.eclipse.viatra.parent.analysis/pom.xml
@@ -8,9 +8,9 @@
 	<url>http://eclipse.org/viatra</url>
 	<packaging>pom</packaging>
 	<parent>
-		<groupId>org.eclipse.viatra</groupId>
+	    <groupId>org.eclipse.viatra</groupId>
 		<artifactId>org.eclipse.viatra.parent</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
+    	<version>1.6.0-SNAPSHOT</version>
 		<relativePath>../org.eclipse.viatra.parent/pom.xml</relativePath>
 	</parent>
 	<properties>
@@ -22,4 +22,16 @@
         <module>../../releng/org.eclipse.viatra.parent.core</module>
         <module>../../releng/org.eclipse.viatra.parent.all</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                   <groupId>org.eclipse.tycho</groupId>
+                   <artifactId>tycho-versions-plugin</artifactId>
+                   <version>${tycho.version}</version>
+                   <configuration>
+                     <artifacts>org.eclipse.viatra.parent,org.eclipse.viatra.parent.core,org.eclipse.viatra.parent.all</artifacts>
+                   </configuration>
+               </plugin>
+        </plugins>
+    </build>
 </project>
