--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -190,6 +190,18 @@
 						</execution>
 					</executions>
 				</plugin>
+				<plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-jar-plugin</artifactId>
+                   <version>2.4</version>
+                   <configuration>
+                        <archive>
+                            <manifestEntries>
+                                <SCM-Revision>${buildNumber}</SCM-Revision>
+                            </manifestEntries>
+                        </archive>
+                    </configuration>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
