[510255] Refactoring build jobs
In order to ensure consistent reversioning of plug-ins on maven deploy,
some cleanup steps were executed on the master branch. This commit
collects these changes and applies them to the 1.5-maintenance  branch.

Change-Id: I2ff03994cc7591088ace2772d36f32abbc5c0cca
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.analysis/pom.xml
+++ b/releng/org.eclipse.viatra.parent.analysis/pom.xml
@@ -22,4 +22,17 @@
         <module>../../releng/org.eclipse.viatra.parent.core</module>
         <module>../../releng/org.eclipse.viatra.parent.all</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                   <groupId>org.eclipse.tycho</groupId>
+                   <artifactId>tycho-versions-plugin</artifactId>
+                   <version>${tycho.version}</version>
+                   <configuration>
+                     <artifacts>org.eclipse.viatra.parent,org.eclipse.viatra.parent.core,org.eclipse.viatra.parent.all</artifacts>
+                     <properties>viatra.main.version</properties>
+                   </configuration>
+               </plugin>
+        </plugins>
+    </build>
 </project>
