--- a/releng/org.eclipse.viatra.parent.analysis/pom.xml
+++ b/releng/org.eclipse.viatra.parent.analysis/pom.xml
@@ -30,6 +30,7 @@
                    <version>${tycho.version}</version>
                    <configuration>
                      <artifacts>org.eclipse.viatra.parent,org.eclipse.viatra.parent.core,org.eclipse.viatra.parent.all</artifacts>
+                     <properties>viatra.main.version</properties>
                    </configuration>
                </plugin>
         </plugins>
