[512504] add support for disabling automatic target platform update
This change introduces a new preference page for the VIATRA Query
Tooling and a single experimental preference that can be used to disable
automatic target platform updates.

The TargetPlatformMetamodelsIndex class takes the preference value into
account and even listens to notifications on changes.

Change-Id: I753fa70304afa76bb7e675b575ef1c1fd7ce9394
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.core/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.core/plugin.xml
@@ -36,5 +36,11 @@
             value="true">
       </persistent>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="org.eclipse.viatra.query.tooling.core.preferences.ToolingCorePreferenceInitializer">
+      </initializer>
+   </extension>
 
 </plugin>
