--- a/query/tests/org.eclipse.viatra.query.testing.snapshot/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.testing.snapshot/pom.xml
@@ -9,6 +9,71 @@
         <version>1.7.0-SNAPSHOT</version>
         <relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
     </parent>
-    <artifactId>org.eclipse.viatra.query.testing.snapshot</artifactId>
-    <packaging>eclipse-plugin</packaging>
+	<artifactId>org.eclipse.viatra.query.testing.snapshot</artifactId>
+	<packaging>eclipse-plugin</packaging>
+    <properties>
+        <emf.workspace.location>${project.basedir}/../../target/workspace</emf.workspace.location>
+    </properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<phase>clean</phase>
+						<goals>
+							<goal>clean</goal>
+						</goals>
+						<configuration>
+							<filesets>
+								<fileset>
+									<directory>emf-gen</directory>
+									<excludes>
+										<exclude>.gitignore</exclude>
+									</excludes>
+								</fileset>
+                                <fileset><!--  EMF generator workspace -->
+                                    <directory>${emf.workspace.location}</directory>
+                                    <excludes>
+                                            <exclude>.gitignore</exclude>
+                                    </excludes>
+                                </fileset>
+							</filesets>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-eclipserun-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<appArgLine>-data ${emf.workspace.location} -application org.eclipse.emf.codegen.ecore.Generator -projects ${project.basedir} -model ${project.basedir}/model/snapshot.genmodel ${project.basedir}</appArgLine>
+					<dependencies>
+						<dependency>
+							<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+					</dependencies>
+					<repositories>
+						<repository>
+							<id>indigo</id>
+							<layout>p2</layout>
+							<url>http://download.eclipse.org/releases/mars</url>
+						</repository>
+					</repositories>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>eclipse-run</goal>
+						</goals>
+						<phase>generate-sources</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
