[515100] Fixing pack200 settings for the build

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -362,6 +362,12 @@
                                 <goals>
                                     <goal>pack</goal>
                                 </goals>
+                                <configuration>
+                                    <supportedProjectTypes>
+                                        <supportedProjectType>eclipse-plugin</supportedProjectType>
+                                        <supportedProjectType>eclipse-test-plugin</supportedProjectType>
+                                    </supportedProjectTypes>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
