--- a/releng/org.eclipse.viatra.update.core/pom.xml
+++ b/releng/org.eclipse.viatra.update.core/pom.xml
@@ -19,6 +19,7 @@
 				<version>${tycho.version}</version>
 				<configuration>
 					<repositoryName>VIATRA</repositoryName>
+					<includePackedArtifacts>true</includePackedArtifacts>
 				</configuration>
 			</plugin>
 			<plugin>
