[515100] Added duplicate pack200 settings as well

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -273,6 +273,12 @@
 								<goals>
 									<goal>normalize</goal>
 								</goals>
+								<configuration>
+                                    <supportedProjectTypes>
+                                        <supportedProjectType>eclipse-plugin</supportedProjectType>
+                                        <supportedProjectType>eclipse-test-plugin</supportedProjectType>
+                                    </supportedProjectTypes>
+                                </configuration>
 							</execution>
 						</executions>
 					</plugin>
@@ -304,6 +310,12 @@
 								<goals>
 									<goal>pack</goal>
 								</goals>
+								<configuration>
+                                    <supportedProjectTypes>
+                                        <supportedProjectType>eclipse-plugin</supportedProjectType>
+                                        <supportedProjectType>eclipse-test-plugin</supportedProjectType>
+                                    </supportedProjectTypes>
+                                </configuration>
 							</execution>
 						</executions>
 					</plugin>
@@ -331,6 +343,12 @@
                                 <goals>
                                     <goal>normalize</goal>
                                 </goals>
+                                <configuration>
+                                    <supportedProjectTypes>
+                                        <supportedProjectType>eclipse-plugin</supportedProjectType>
+                                        <supportedProjectType>eclipse-test-plugin</supportedProjectType>
+                                    </supportedProjectTypes>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
