[472850] Ensure forbidden access is only a warning
This is required because xtend-maven-compiler and tycho-compiler-plugin
use toolchains differently.

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -183,6 +183,10 @@
 						<excludeResources>
 							<excludeResource>**/.gitignore</excludeResource>
 						</excludeResources>
+						<compilerArgs>
+						  <compilerArg>-err:-forbidden</compilerArg>
+						  <compilerArg>-warn:+forbidden</compilerArg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
