[472850] Forbidden access settings - take four

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -175,7 +175,7 @@
 						<excludeResources>
 							<excludeResource>**/.gitignore</excludeResource>
 						</excludeResources>
-						<compilerArguments>-err:-forbidden</compilerArguments>
+						<compilerArgument>-err:-forbidden</compilerArgument>
 					</configuration>
 				</plugin>
 				<plugin>
