[472850] Forbidden access settings - take six

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -182,9 +182,7 @@
 						<excludeResources>
 							<excludeResource>**/.gitignore</excludeResource>
 						</excludeResources>
-						<compilerArgs>
-						  <compilerArg>-err:-forbidden</compilerArg>
-						</compilerArgs>
+						<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
 					</configuration>
 				</plugin>
 				<plugin>
