--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -154,16 +154,9 @@
 						<extraClasspathElements>
 							<extraClasspathElement>
 								<groupId>com.oracle</groupId>
-								<artifactId>javafx</artifactId>
-								<version>8.0.0-SNAPSHOT</version>
-								<systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
-								<scope>system</scope>
-							</extraClasspathElement>
-							<extraClasspathElement>
-								<groupId>com.oracle</groupId>
 								<artifactId>javafxswt</artifactId>
 								<version>8.0.0-SNAPSHOT</version>
-								<systemPath>${java.home}/lib/jfxswt.jar</systemPath>
+								<systemPath>${java.home}/jre/lib/jfxswt.jar</systemPath>
 								<scope>system</scope>
 							</extraClasspathElement>
 							<extraClasspathElement>
@@ -178,11 +171,10 @@
 							</extraClasspathElement>
 						</extraClasspathElements>
 						<useJDK>BREE</useJDK>
-						<useProjectSettings>true</useProjectSettings>
+ 						<useProjectSettings>true</useProjectSettings>
 						<excludeResources>
 							<excludeResource>**/.gitignore</excludeResource>
 						</excludeResources>
-						<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
 					</configuration>
 				</plugin>
 				<plugin>
