--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -272,6 +272,76 @@
         </pluginRepository>-->
 	</pluginRepositories>
 	<profiles>
+        <profile>
+            <id>sign_milestone</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>BUILD_TYPE</name>
+                    <value>integration</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho.extras</groupId>
+                        <artifactId>tycho-pack200a-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <executions>
+                            <execution>
+                                <id>pack200-normalize</id>
+                                <goals>
+                                    <goal>normalize</goal>
+                                </goals>
+                                <configuration>
+                                    <supportedProjectTypes>
+                                        <supportedProjectType>eclipse-plugin</supportedProjectType>
+                                        <supportedProjectType>eclipse-test-plugin</supportedProjectType>
+                                    </supportedProjectTypes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!--
+                       Note that plugins bound to same phase will be executed in the same 
+                       order as they are listed, so that metadata generated after signing
+                    -->
+                    <plugin>
+                        <groupId>org.eclipse.cbi.maven.plugins</groupId>
+                        <artifactId>eclipse-jarsigner-plugin</artifactId>
+                        <version>${cbi.jarsigner.version}</version>
+                        <executions>
+                            <execution>
+                                <id>sign</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <phase>verify</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.eclipse.tycho.extras</groupId>
+                        <artifactId>tycho-pack200b-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <executions>
+                            <execution>
+                                <id>pack200-pack</id>
+                                <goals>
+                                    <goal>pack</goal>
+                                </goals>
+                                <configuration>
+                                    <supportedProjectTypes>
+                                        <supportedProjectType>eclipse-plugin</supportedProjectType>
+                                        <supportedProjectType>eclipse-test-plugin</supportedProjectType>
+                                    </supportedProjectTypes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 		<profile>
 			<id>sign_milestone</id>
 			<activation>
