Extend code signing to integration builds as well - 2nd try

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -273,7 +273,7 @@
 	</pluginRepositories>
 	<profiles>
         <profile>
-            <id>sign_milestone</id>
+            <id>sign_integration</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
                 <property>
