[507732] Help understanding usage counting errors and warnings
The understanding was helped in two ways:

 (1) Previously used 'positive', 'quantified' and 'read-only' qualifiers
from the error messages were replaced with 'enumerable', 'quantified'
and 'uncountable' qualifiers, respectively.
 (2) A quick fix was added that opens a help page with a detailed
description along with a few examples that illustrate the issue itself.

Change-Id: Ie73ea855a5b1c41897ecbabba9a9f915eb5bd505
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/plugin.xml
+++ b/documentation/org.eclipse.viatra.documentation.help/plugin.xml
@@ -14,5 +14,11 @@
             primary="false">
       </toc>
    </extension>
+   <extension
+         point="org.eclipse.help.contexts">
+      <contexts
+            file="org.eclipse.viatra.documentation.help.contexts.xml">
+      </contexts>
+   </extension>
 
 </plugin>
