--- a/query/features/org.eclipse.viatra.query.sdk.feature/pom.xml
+++ b/query/features/org.eclipse.viatra.query.sdk.feature/pom.xml
@@ -34,6 +34,9 @@
 					</execution>
 				</executions>
 				<configuration>
+				    <excludes>
+				        <plugin id="org.eclipse.viatra.documentation.help"/>
+				    </excludes>
 					<labelSuffix></labelSuffix>
 				</configuration>
 			</plugin>
