--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -2,4 +2,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                html/,\
                tutorial.toc.xml,\
-               viatra.toc.xml
+               viatra.toc.xml,\
+               org.eclipse.viatra.documentation.help.contexts.xml
