--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf/build.properties
@@ -9,7 +9,6 @@ bin.includes = model/,\
 jars.extra.classpath = platform:/plugin/org.eclipse.emf.mwe2.launch,\
                        platform:/plugin/org.eclipse.emf.mwe.utils,\
                        platform:/plugin/org.eclipse.emf.codegen.ecore,\
-                       platform:/plugin/org.eclipse.xtext.generator,\
-                       platform:/fragment/com.google.inject.multibindings
+                       platform:/plugin/org.eclipse.xtext.generator
 src.includes = about.html
                        
