--- a/query/plugins/org.eclipse.viatra.query.patternlanguage/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage/build.properties
@@ -12,3 +12,10 @@ jars.extra.classpath = platform:/plugin/org.eclipse.emf.mwe2.launch,\
                        platform:/plugin/org.eclipse.emf.codegen.ecore,\
                        platform:/plugin/org.eclipse.xtext.generator
 src.includes = about.html
+additional.bundles = org.antlr.runtime,\
+                     org.objectweb.asm,\
+                     org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib,\
+                     org.eclipse.xtext.generator,\
+                     org.eclipse.viatra.query.patternlanguage.generator,\
+                     org.eclipse.xtext.xtext.generator
