[514376] Moved annotation validators to fragments
After the Guava dependencies were updated, annotation validators that
had optional dependencies on the patternlanguage, were not loading. This
change moves these validators to specific fragments that have mandatory
dependencies on the patternlanguage.

Change-Id: Ia1b30943995273df733ac18d3442433de50a8969
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -48,6 +48,7 @@
         <module>../../addon/plugins/org.eclipse.viatra.addon.querybyexample</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.querybyexample.ui</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime.validation</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui.zest</module>
