[514376] restored accidentally deleted plugin.xml

--- a/addon/plugins/org.eclipse.viatra.addon.validation.runtime/build.properties
+++ b/addon/plugins/org.eclipse.viatra.addon.validation.runtime/build.properties
@@ -3,5 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                schema/,\
-               about.html
+               about.html,\
+               plugin.xml
 src.includes = about.html
